# ImpetusChain

./: .gitignore  README.md  design.md  pyproject.toml
projects/AI/core/analysis/: 20260622T220532979123Z.md  20260622T220635937579Z.md  20260622T220743044512Z.md
projects/core_demo/core/: analysis_strategy.yaml
projects/key_demo/core/: ai_prompt.md
src/impetus_chain/: __init__.py  ai_gateway.py  ai_seed.py  chain.py  config.py  main.py  models.py  pipeline.py  project_secrets.py  project_service.py  project_store.py  ui_server.py
src/impetus_chain/prompts/: node_analysis_full_prompt.txt  node_analysis_step_prompt.txt
src/impetus_chain/static/: app.js
src/impetus_chain/templates/: index.html
tests/: test_chain.py
